Added footer section, footer.css, changed header logo, structured and designed the footer section

--- a/styles/article.css
+++ b/styles/article.css
@@ -27,6 +27,9 @@
 .article-box:hover {
   transform: translateY(-10px);
 }
+.article-box:hover h3 {
+  color: var(--LimeGreen);
+}
 
 .article-box-image img {
   width: 100%;
