--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,8 @@ header nav {
 }
 
 .header-links ul {
+  margin: 0;
+  padding: 0;
   display: flex;
   gap: 2rem;
   list-style: none;
@@ -48,4 +50,125 @@ header nav {
     var(--BrightCyan),
     var(--LimeGreen)
   );
+}
+
+.mobile-menu {
+  cursor: pointer;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  width: 30px;
+  height: 15px;
+}
+
+.mobile-menu .bar1,
+.bar2,
+.bar3 {
+  width: 100%;
+  height: 3px;
+  background-color: var(--DarkBlue);
+  transition: ease 0.3s;
+}
+
+.mobile-nav {
+  display: none;
+  justify-content: center;
+  position: absolute;
+  width: 60%;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--White);
+  border-radius: 10px;
+  padding: 2rem 1rem;
+  margin-top: 6rem;
+  box-shadow: 0 10px 40px 30px rgba(0, 0, 0, 0.162);
+  transition: ease 0.4s;
+}
+
+.mobile-nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+.mobile-nav ul li a {
+  color: var(--DarkBlue);
+}
+/*  */
+/* MEDIA QUERIES */
+/*  */
+
+@media all and (max-width: 1024px) {
+  header nav {
+    padding: 1rem 5rem;
+  }
+  .header-logo img {
+    width: 90%;
+    height: auto;
+  }
+  .header-links ul {
+    display: flex;
+    gap: 1.2rem;
+    list-style: none;
+  }
+}
+@media all and (max-width: 812px) {
+  header nav {
+    padding: 1rem 4rem;
+  }
+  .header-logo img {
+    margin: 0;
+    padding: 0;
+    width: 90%;
+    height: auto;
+  }
+  .header-links ul {
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+  }
+  .header-btn {
+    padding: 0.5rem 1rem;
+  }
+}
+@media all and (max-width: 768px) {
+  .header-logo img {
+    width: 80%;
+    height: auto;
+  }
+  .header-links {
+    display: none;
+  }
+  .header-btn {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: flex;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+}
+
+@media all and (max-width: 435px) {
+  header nav {
+    padding: 1rem 2rem;
+    align-items: center;
+  }
+
+  .header-logo img {
+    width: 70%;
+    height: auto;
+  }
+  .mobile-menu .bar1,
+  .bar2,
+  .bar3 {
+    width: 70%;
+  }
 }
