--- a/styles/reason.css
+++ b/styles/reason.css
@@ -7,10 +7,8 @@
   --LightGray: hsl(0, 0%, 98%);
   --White: hsl(0, 0%, 100%);
 } */
-/* 
-* {
-  outline: 1px solid red;
-} */
+
+/*   */
 
 .reason {
   background-color: var(--LightGrayBlue);
@@ -25,7 +23,7 @@
 
 .reason p {
   margin-top: 1rem;
-  color: var(--DarkBlue);
+  color: var(--GrayBlue);
 }
 
 .reason-box-container {
@@ -36,13 +34,8 @@
   align-items: center;
 }
 
-.reason-box:nth-child(4) {
-  /* the fourth element wasnt aligned properly for some weird */
-  margin-top: -0.5rem;
-}
-
 .reason-box img {
-  width: 20%;
+  width: 3rem;
 }
 
 .reason-box h3 {
@@ -54,4 +47,74 @@
 .reason-box p {
   font-weight: 300;
   color: var(--GrayBlue);
+}
+
+/*  */
+/* MEDIA QUERIES */
+/*  */
+@media all and (max-width: 1024px) {
+  .reason {
+    padding: 5rem 5rem;
+  }
+  .reason-box-container {
+    gap: 1rem;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .reason {
+    padding: 4rem 4rem;
+  }
+
+  .reason h2 {
+    font-size: 1.5rem;
+  }
+
+  .reason p {
+    font-size: 14px;
+  }
+
+  .reason-box h3 {
+    font-size: 1rem;
+  }
+
+  .reason-box p {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 426px) {
+  .reason {
+    padding: 2rem 2rem;
+  }
+  .reason h2 {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+  .reason p {
+    /* word-break: break-all; */
+    text-align: center;
+    font-size: 12px;
+  }
+
+  .reason-box-container {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .reason-box h3 {
+    text-align: center;
+  }
+
+  .reason-box img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+@media all and (max-width: 320px) {
+  .reason {
+    padding: 1rem 2rem;
+  }
 }
