--- a/styles/article.css
+++ b/styles/article.css
@@ -5,9 +5,11 @@
 
 .article h2 {
   color: var(--DarkBlue);
+  font-weight: 300;
 }
 
 .article-container {
+  width: 100%;
   display: flex;
   gap: 1rem;
   justify-content: space-between;
@@ -18,7 +20,7 @@
 
 .article-box {
   background-color: var(--White);
-  width: 100%;
+  width: 24%;
   height: auto;
   border-radius: 0.5rem;
   transition: ease 0.3s;
@@ -33,12 +35,8 @@
 
 .article-box-image img {
   width: 100%;
-  height: auto;
+  /* height: auto; */
   border-radius: 0.5rem 0.5rem 0 0;
-}
-.article-box-image .img1 {
-  width: 100%;
-  height: 171px;
 }
 
 .article-box-content {
@@ -46,23 +44,77 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 1px;
 }
 
 .article-box-content h4 {
   color: var(--GrayBlue);
-
   font-weight: 300;
   font-size: 11px;
 }
 .article-box-content h3 {
   color: var(--DarkBlue);
-
   font-weight: 300;
+  font-size: 16px;
 }
 
 .article-box-content p {
   color: var(--GrayBlue);
   font-weight: 300;
   font-size: 14px;
+}
+
+/*  */
+/* MEDIA QUERIES */
+/*  */
+@media all and (max-width: 1024px) {
+  .article {
+    padding: 5rem 5rem;
+  }
+
+  .article-box-content h3 {
+    font-size: 15px;
+  }
+  .article-box-content p {
+    font-size: 12px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .article {
+    padding: 4rem 4rem;
+  }
+
+  .article h2 {
+    font-size: 1.5rem;
+  }
+
+  .article-container {
+    flex-wrap: wrap;
+    gap: 0.3rem;
+  }
+
+  .article-box {
+    width: 31%;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .article {
+    padding: 2rem 2rem;
+  }
+
+  .article h2 {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+
+  .article-container {
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+
+  .article-box {
+    width: auto;
+  }
 }
